[project]
name = "image-diff"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick",email = "patrsc@nubu.at"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "imagehash (>=4.3.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
